@@ -4,6 +4,8 @@ Version 8.20 (Unreleased)
 - Add raw data toggle for Additional Data
 
 - Add initial support for Redis Cluster.
+- Support a list of hosts in the ``redis.clusters`` configuration along side
+  the traditional dictionary style configuration.
 
 Schema Changes
 ~~~~~~~~~~~~~~
